--- a/templates/index.html
+++ b/templates/index.html
@@ -87,12 +87,13 @@
     </nav>
     <div id='imageSection'>
     <h1>JobFinder</h1>
-    <img id='topimage' src="https://e2234b5e-98cd-4edc-8e03-8214dc47d754-00-2mgjd7t20dg6s.pike.replit.dev/static/jobit.jpg" class="img-fluid" alt="Image">
+    <img id='topimage' src="https://e2234b5e-98cd-4edc-8e03-8214dc47d754-00-2mgjd7t20dg6s.pike.replit.dev:3000/static/jobit.jpg" class="img-fluid" alt="Image">
       </div>
+    
     <h2 class='text-center mt-3 mb-2'>About JobFinder</h2>
     <p class='lead'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. </p>
     <h2 class='text-center'>Job Openings</h2>
-    <div class="row">
+    <div class="row ">
       {% for job in jobs %}
       {% include 'jobitem.html' %}
       {% endfor %}
