--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <style>
+<style>
 
     #imageSection{
       positio: relative;
@@ -37,7 +37,7 @@
     .card{
       display:flex;
       flex-direction:inherit;
-      width: 40vw;
+      width: 50vw;
       margin: 1rem 2rem;
       padding:1rem;
     }
@@ -72,7 +72,21 @@
       /* margin-top: 1rem; */
 
     }
-  </style>
+.joblist {
+  margin: 0 auto;
+  width: 55vw;
+}
+
+@media only screen and (max-width: 600px) {
+  .joblist {
+      margin: 0 auto;
+      width: 80vw;
+  }
+  .card {
+   width: 70vw;
+  }
+}
+</style>
 </head>
 <body>
   <div class='container'>
@@ -93,7 +107,7 @@
     <h2 class='text-center mt-3 mb-2'>About JobFinder</h2>
     <p class='lead'>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. Sunt, qu psum dolor sit amet consectetur adipisicing elit. </p>
     <h2 class='text-center'>Job Openings</h2>
-    <div class="row ">
+    <div class="joblist ">
       {% for job in jobs %}
       {% include 'jobitem.html' %}
       {% endfor %}
