Added Footer template and made some changes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -113,11 +113,10 @@
       {% endfor %}
     </div>    
     <div class='bottomSection text-center'>
-      <button type="button" class="btn text-center btn-primary mt-4">Contact Us</button>
-      <p class='mt-4'>Copyright &copy; reserved ShivamSingh2024</p>
+      <a href='mailto:samsersingh3133s@gmail.com?subject=Question%20about%20job%20openings&body=My%20Name%3A%20%3CYour%20name%20here%3E%0D%0AMy%20Question%20is%3A%3CWrite%20you%20question%20here%3E' type="button" class="btn text-center btn-primary mt-4">Contact Us</a>
 
       </div>
   </div>
-  
+ {% include 'footer.html' %}
 </body>
 </html>
